fix - instructions, alignment and addTasks() function

--- a/todo-app/style.css
+++ b/todo-app/style.css
@@ -60,4 +60,5 @@ form {
 small{
     color: #b5b5b5;
     margin-top: 2.5rem;
+    text-align: center;
 }
